bad/assign_method_call_void_void.example_compiler_output
ERROR
[1mbad/assign_method_call_void_void.lat:8:16: [1;31merror: [0;1mleft side is not assignable[m
	(new M).foo() = vfunc();
	              [1;32m^[m
[1mbad/assign_method_call_void_void.lat:8:2: [1;34mnote: [0;1mleft side starts here[m
	(new M).foo() = vfunc();
	[1;32m^[m
